apps/base/media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: artifactory.local.hejsan.xyz/docker/linuxserver/plex:1.41.0.8994-f2c27da23-ls238
          ports:
            - containerPort: 32400
              name: http
          livenessProbe:
            httpGet:
              path: /identity
              port: 32400
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /identity
              port: 32400
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2
          volumeMounts:
            - name: plex-config-pvc
              mountPath: /config
            - name: shared-storage
              mountPath: /mnt/storage
      volumes:
        - name: plex-config-pvc
          persistentVolumeClaim:
            claimName: plex-config-pvc-plex-0
        - name: shared-storage
          persistentVolumeClaim:
            claimName: media-media-shared-nfs-pvc
