apps/base/media/plex/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  selector:
    app: plex
  ports:
    - name: http
      targetPort: 32400
      port: 32400
