apps/base/media/plex/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: plex
          port: http

  tls:
    secretName: ${CERT_SECRET_INTERNAL}
